k8s-Manifests/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paytm-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paytm-backend
  template:
    metadata:
      labels:
        app: paytm-backend
    spec:
      containers:
      - name: backend-container
        image: 218405927623.dkr.ecr.us-east-2.amazonaws.com/backend:v2
        ports:
        - containerPort: 5000
