k8s-Manifests/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paytm-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paytm-frontend
  template:
    metadata:
      labels:
        app: paytm-frontend
    spec:
      containers:
      - name: frontend-container
        image: 218405927623.dkr.ecr.us-east-2.amazonaws.com/frontend:v1
        ports:
        - containerPort: 80
