k8s-Manifests/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytm-backend-svc
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: paytm-backend
