k8s-Manifests/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytm-frontend-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: paytm-frontend
